movie-service-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: movie-service-deployment
spec:
  replicas: 1                      # кількість екземплярів Pod, що буде створено цим Deployment
  selector:
    matchLabels:
      app: movie-service                # селектор по якому Deployment зв'язаний з Pod
  template:
    metadata:
      labels:
        app: movie-service               # мітка Pod по якому вона буде зв'язана з Deployment та Service
    spec:
      containers:
        - image: ivanluchkin/lab-movie-service:0.0.1    # образ Docker
          imagePullPolicy: Always   # вказує k8s, що образ не потрібно завантажувати (варто використовувати лише для випадків, коли образи локальні)
          name: movie-service           # ім'я контейнеру
          ports:
            - containerPort: 8080
