ingress-config.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: demo-ingress
spec:
  rules:
    - http:
        paths:
          - path: /user      # шлях по якому відбувається перенаправлення на сервіс
            pathType: Prefix           # все, що починається з `/api` буде направлено на сервіс demo-service. Альтернативно можна використовувати `Exact` та `ImplementationSpecific`
            backend:
              service:
                name: user-service-service # ім'я сервісу
                port:
                  number: 80           # порт на якому запущено сервіс
          - path: /movie
            pathType: Prefix
            backend:
              service:
                name: movie-service-service
                port:
                  number: 80
