istio2.yaml
apiVersion: networking.istio.io/v1beta1
kind: DestinationRule
metadata:
  name: service2-destination
spec:
  host: user-service-service
  trafficPolicy:
    outlierDetection:
      consecutive5xxErrors: 2
      interval: 10s
      baseEjectionTime: 30s
      maxEjectionPercent: 100
